--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+API_HOST="localhost:3000"
+API_DATABASE="mysql"
