--- a/.env
+++ b/.env
@@ -4,6 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-API_HOST="localhost:3000"
-API_DATABASE="mysql"
+DATABASE_URL="mysql://root:root@localhost:3306/blog"
