--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-blog",
   "version": "0.1.0",
   "private": true,
+  "author": "github: TheWitcher1991 <alikzoy@gmail.com>",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,13 +13,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "argon2": "^0.30.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1",
@@ -26,5 +30,13 @@
   },
   "devDependencies": {
     "prisma": "^4.13.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheWitcher1991/nextjs-prisma-blog"
+  },
+  "devEngines": {
+    "node": ">= 18.x.x",
+    "npm": ">= 9.x.x"
   }
 }
