--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:root@localhost:3306/blog"
+NEXTAUTH_SECRET=secret
+NEXTAUTH_URL=http://localhost:3000
